syntax = "proto3";

package job;

option go_package = "internal/proto/jobpb";

service JobService {
    rpc CreateJob(CreateJobRequest) returns (JobResponse);
    rpc UpdateJob(UpdateJobRequest) returns (JobResponse);
    rpc CancelJob(CancelJobRequest) returns (JobResponse);
}

message CreateJobRequest {
    string app_id = 1;
    string type = 2;
    string payload = 3;
}

message UpdateJobRequest {
    string job_id = 1;
    string payload = 2;
}

message CancelJobRequest {
    string job_id = 1;
}

message JobResponse {
    string job_id = 1;
    string status = 2;
}
